--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+ 
 
 # C extensions
 *.so
@@ -127,6 +128,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+migrations
 
 # Spyder project settings
 .spyderproject
